Add functionality to launch external app and update manifest

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -41,7 +41,7 @@
 
     </application>
 
-    <queries>
-        <package android:name="ir.sep.android.smartpos" />
-    </queries>
+<!--    <queries>-->
+    <!--        <package android:name="ir.sep.android.smartpos" />-->
+    <!--    </queries>-->
 </manifest>
