--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,10 +12,10 @@
         android:hardwareAccelerated="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
-        android:usesCleartextTraffic="true"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Padide"
+        android:usesCleartextTraffic="true"
         tools:targetApi="31">
         <activity
             android:name=".SpelashActivity"
@@ -34,8 +34,7 @@
             android:name=".MainActivity"
             android:exported="false"
             android:label="Main"
-            android:theme="@style/Theme.Padide">
-        </activity>
+            android:theme="@style/Theme.Padide"></activity>
 
         <receiver
             android:name=".BootReceiver"
