feat: Implement lock task functionality in MainActivity and enhance splash screen with welcome message

--- a/gradle.properties
+++ b/gradle.properties
@@ -10,8 +10,12 @@
 # This option should only be used with decoupled projects. For more details, visit
 # https://developer.android.com/r/tools/gradle-multi-project-decoupled-projects
 # org.gradle.parallel=true
-#Mon Jun 16 10:44:56 IRST 2025
+#Tue Jul 15 00:20:17 IRST 2025
 android.nonTransitiveRClass=true
 android.useAndroidX=true
 kotlin.code.style=official
 org.gradle.jvmargs=-Xmx2048m -Dfile.encoding\=UTF-8
+systemProp.http.proxyHost=127.0.0.1
+systemProp.http.proxyPort=10808
+systemProp.https.proxyHost=127.0.0.1
+systemProp.https.proxyPort=10808
